[package]
authors = ["Miguel Rodríguez Pérez <miguel@det.uvigo.gal>"]
description = "A simple solution to the second programming exercise of the CN subject"
license = "GPL-3.0-or-later"
name = "tcp1"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
regex = "1.11"
socket2 = "0.5"
thiserror = "2.0"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
